# kawaii

./: .gitignore  Cargo.toml  README.md  cmake.sh  other.sh  pyproject.toml  shared.sh
kawaii/: __init__.py  config.py  group.py  init_project.py  utils.py  vscode.py
kawaii/scripts/: cargo-apk  cmake  meson  workspace.code-workspace
kawaii/templates/: crossfile.ini
simple_and_kawaii/: __init__.py  __main__.py  build.py  config.py  group.py  init_project.py  utils.py  vscode.py
simple_and_kawaii/scripts/: autotools  cargo-apk  cargo-apk.sh  cmake  cmake.sh  init.sh  meson  meson.sh  shared.sh
simple_and_kawaii/templates/: crossfile.ini
src/: init.rs  main.rs
tests/: test_simple_and_kawaii.py
