[tool.poetry]
name = "simple-and-kawaii"
version = "0.1.0"
description = ""
authors = ["Nefo Fortressia <nefothingy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = {git = "https://github.com/EchidnaHQ/python-inquirer"}
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kawaii = "simple_and_kawaii:cli"