[tool.poetry]
name = "kawaii"
version = "0.2.0"

description = "A very simple and kawaii build system focused on Android cross-compiling!"
authors = ["Nefo Fortressia <nefothingy@hotmail.com>"]
readme = "README.md"

license = "MIT OR APACHE"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Jinja2 = "^3.1.2"
commentjson = "^0.9.0"
requests = "^2.28.1"
typing-extensions = "^4.3.0"
marshmallow-dataclass = "^8.5.8"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
